# binary-shared

./: CHANGELOG.md  Main.hs  binary-shared-lib.cabal
src/: MyLib.hs
