cabal-version:      2.4
name:               binary-shared-lib
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, dependent-map, bytestring, ghc, some, dependent-sum-template, array, dependent-sum
    hs-source-dirs:   src
    default-language: Haskell2010

executable binary-test
  main-is: Main.hs
  build-depends: binary-shared-lib, base, ghc-debug-stub
  ghc-options: -threaded -rtsopts
